--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@angular/platform-browser": "2.2.4",
     "@angular/platform-browser-dynamic": "2.2.4",
     "@angular/router": "3.2.4",
-
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.0",
+    "jquery": "^3.1.1",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.37",
     "zone.js": "0.6.26"
