custom pipe for filtering products was added, tslint was added

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/es6-shim": "^0.31.32",
     "live-server": "0.8.2",
-    "typescript": "^2.0.0"
+    "tslint": "^4.2.0",
+    "typescript": "^2.1.4"
   }
 }
